<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradian_background"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/trans">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tool_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_20"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap,SpUsage" />

            <ImageView
                android:id="@+id/filter"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_filter"
                android:tint="@color/white"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movies_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/internet_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="no_internet.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/internet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/internet_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/please_check_your_internet_connection"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/txt_15"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/refresh"
            style="@style/App_ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/internet_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/refresh"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_13"
            android:textStyle="bold"
            tools:ignore="SpUsage"
            tools:targetApi="lollipop" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progress_background"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                app:lottie_autoPlay="true"
                app:lottie_fileName="progress.json"
                app:lottie_loop="true" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</LinearLayout>