<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/txt_20"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/story"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/txt_13"
            android:textStyle="normal"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/txt_14"
            android:textStyle="normal"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_boarder"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/adult_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_adult"
                    android:tint="@color/yellow"
                    tools:ignore="ContentDescription,NestedWeights" />

                <TextView
                    android:id="@+id/adult_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:text="@string/suitable_for_children"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_13"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_boarder"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="3">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_date"
                    android:tint="@color/yellow"
                    tools:ignore="ContentDescription,NestedWeights" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_13"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/trailer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/trailers"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/txt_13"
            android:textStyle="normal"
            tools:ignore="SpUsage" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/review_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/reviews"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/txt_13"
            android:textStyle="normal"
            tools:ignore="SpUsage" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>